--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
     <!--<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">-->
   </head>
   <body>
-    <my-app></my-app>
+    <app-root></app-root>
   </body>
 </html>
